Bug 462416 - Text files listed as "0 bytes" irrespective of real size
Summary: Text files listed as "0 bytes" irrespective of real size
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-30 00:57 UTC by Nate Graham
Modified: 2022-12-01 15:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The text file (5.64 KB, text/plain)
2022-11-30 00:57 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2022-11-30 00:57:27 UTC
Created attachment 154156 [details]
The text file

Wayland, current git master on top of Fedora 37

STEPS TO REPRODUCE
1. Attach a text file that is not empty

OBSERVED RESULT
It is shown as "0 bytes"

EXPECTED RESULT
Its real size is shown
Comment 1 Bug Janitor Service 2022-11-30 21:21:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/692
Comment 2 Tobias Fella 2022-12-01 15:17:05 UTC
Git commit d107dfcab16182c0f2b8ccf81c6aa2bde61a8b03 by Tobias Fella.
Committed on 01/12/2022 at 14:55.
Pushed by tfella into branch 'master'.

Fix file size when uploading files

M  +1    -1    src/neochatroom.cpp

https://invent.kde.org/network/neochat/commit/d107dfcab16182c0f2b8ccf81c6aa2bde61a8b03