Fix file size when uploading files

BUG: 462416